Added new categories activity and tied in our 2 activities to the nav bar. I allso added list view objects to each view and tested. We can now switch back and forth between the two activies using the navigation drawer!

--- a/app/src/main/res/layout/content_categories.xml
+++ b/app/src/main/res/layout/content_categories.xml
@@ -5,17 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.mercy.flashstax.Main2Activity"
-    tools:showIn="@layout/app_bar_main2">
+    tools:context="edu.mercy.flashstax.CategoriesActivity"
+    tools:showIn="@layout/app_bar_categories">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
