--- a/app/src/main/res/layout/app_bar_categories.xml
+++ b/app/src/main/res/layout/app_bar_categories.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.mercy.flashstax.Main2Activity">
+    tools:context="edu.mercy.flashstax.CategoriesActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -20,10 +20,10 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main2" />
+    <include layout="@layout/content_categories" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/addStack"
+        android:id="@+id/addCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
