--- a/app/src/main/res/layout/nav_header_main2.xml
+++ b/app/src/main/res/layout/nav_header_main2.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/flash_stax_icon" />
+        app:srcCompat="@mipmap/flash_stax_icon"
+        android:contentDescription="" />
 
     <TextView
         android:layout_width="match_parent"
