--- a/app/src/main/res/layout/content_edit_stack.xml
+++ b/app/src/main/res/layout/content_edit_stack.xml
@@ -5,22 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="edu.mercy.flashstax.CategoriesActivity"
-    tools:showIn="@layout/app_bar_categories">
+    tools:context="edu.mercy.flashstax.EditStackActivity"
+    tools:showIn="@layout/activity_edit_stack">
 
     <ListView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:id="@+id/listCards"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:entries="@array/edit_stack_test"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
