--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -13,13 +13,15 @@
         android:text="Enter Stack Name: "
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
+
     <EditText
         android:id="@+id/editTextDialogUserInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <!-- <requestFocus />   -->
+        <requestFocus />
 
     </EditText>
+
 
 </LinearLayout>
