--- a/app/src/main/res/layout/activity_edit_stack.xml
+++ b/app/src/main/res/layout/activity_edit_stack.xml
@@ -20,15 +20,19 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_edit_stack" />
+    <include layout="@layout/content_edit_stack"
+        android:id="@+id/include2" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/addCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
+        android:layout_gravity="top|left"
+        android:layout_marginBottom="@dimen/fab_margin_bottom"
+        android:layout_marginEnd="@dimen/fab_margin_right"
         android:tint="@android:color/white"
+        app:layout_anchor="@+id/include2"
+        app:layout_anchorGravity="bottom|right"
         app:srcCompat="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
