--- a/app/src/main/res/layout/prompts.xml
+++ b/app/src/main/res/layout/prompts.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout_root"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,17 +8,18 @@
     android:padding="10dp" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textAddStackMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter Stack Name: "
+        android:text="@string/prompts_prompt_text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 
     <EditText
         android:id="@+id/editTextDialogUserInput"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        tools:ignore="LabelFor,TextFields">
 
         <requestFocus />
 
