--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#406141</color>
     <color name="colorPrimaryLight">#7eac80</color>
     <color name="colorAccent">#69f0ae</color>
+    <color name="colorWarning">#b71c1c</color>
 </resources>
