Clicking an item on the main list now launches the Edit Stack screen Removed back button on the Edit Stack screen in favor of the Cancel button Added Play button to Edit Stack screen (not coded yet)
Next:
Fill in Stack Name and Category text boxes when launching the Edit Stack screen

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,11 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.PlayButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/colorAccent</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
     <style name="AppTheme.DeleteButton" parent="Widget.AppCompat.Button.Colored">
         <item name="colorButtonNormal">@color/colorWarning</item>
     </style>
