--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryLight">#7eac80</color>
     <color name="colorAccent">#69f0ae</color>
     <color name="colorWarning">#b71c1c</color>
+    <color name="black">#000000</color>
 </resources>
