--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -9,22 +9,8 @@
     tools:showIn="@layout/app_bar_main2">
 
     <!--
-    Text Dialogue stuff
+    Stack Select screen.
     -->
-
-<!--
-    <EditText
-        android:id="@+id/editStack1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp">
-
-    </EditText>
-
-    -->
-
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
