--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -9,5 +9,8 @@
             android:id="@+id/nav_categories"
             android:icon="@drawable/ic_android_black_24dp"
             android:title="Categories" />
-
+        <item
+            android:id="@+id/nav_play"
+            android:icon="@drawable/ic_android_black_24dp"
+            android:title="Play" />
 </menu>
