Cleaned up some screens.  Formatting still a bit janky.

--- a/app/src/main/res/layout/content_play.xml
+++ b/app/src/main/res/layout/content_play.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline3"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.96" />
+        app:layout_constraintGuide_begin="369dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -63,22 +63,22 @@
         android:layout_marginRight="8dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.68" />
+        app:layout_constraintHorizontal_bias="0.617" />
 
     <Button
         android:id="@+id/buttonFlip"
-        android:layout_width="272dp"
-        android:layout_height="36dp"
+        android:layout_width="277dp"
+        android:layout_height="48dp"
         android:text="Flip"
-        app:layout_constraintRight_toLeftOf="@+id/guideline3"
-        android:layout_marginRight="33dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="31dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline4"
-        app:layout_constraintHorizontal_bias="0.727"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="33dp" />
+        android:layout_marginEnd="33dp"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="1.0" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
