--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -15,10 +15,12 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Press + to add new stack name."
+        android:text="Press + to add new stack."
         android:textAppearance="?android:attr/textAppearanceLarge"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="176dp" />
+        android:layout_marginRight="96dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/listStacks"
+        android:layout_marginBottom="31dp" />
 
     <ListView
         android:id="@+id/listStacks"
@@ -36,6 +38,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
